--- a/hobby.html
+++ b/hobby.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ravel Oliveira's Profile</title>
+  <title>Jane Smith's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -16,23 +16,22 @@
         </ul>
     </div>
 
-    <header>
-      <img src="images/me.jpg" alt="A profile image of Ravel Oliveira" class="profile-image">
+    <header class="test">
+      <div class="profile-image-experience"></div>
       <h1 class="tag name">Hello, I’m Ravel.</h1>
       <p class="tag location">My home is Goiânia, Brazil.</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I’m an experienced professional in Graphic Design and Web Design, with solid academic training in Art Direction, Computer Network Technology and Graphic Design. 
-          Fluent in English, responsible for creating and producing graphic material for renowned clients such as Butantan, Jagermeister and Prince.</p>
-        <p>I’m a currently a graphic designer looking to improve and learn more about Front End Web Development.</p>
+        <h2>Work Experience</h2>
+        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set.</p>
+        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set.</p>
       </div> 
 
       <div class="card">
-        <h2>Goals</h2>
-        <p>Without losing my current design mindset, i want to master and further improve my skills and abilities in:</p>
+        <h2>Hobby</h2>
+        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
