Fixed some stuff
Fixed image size from the header bg, add 2 more cards at main and put the flex-wrap at the class .flex to adjust the cards.

--- a/hobby.html
+++ b/hobby.html
@@ -16,21 +16,47 @@
         </ul>
     </div>
 
-    <header class="test">
-      <div class="profile-image-experience"></div>
+    <header>
+      <div class="profile-image-hobby"></div>
       <h1 class="tag name">Hello, I’m Ravel.</h1>
-      <p class="tag location">My home is Goiânia, Brazil.</p>
+      <p class="tag location-hobby">...and here are some new things about me.</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Work Experience</h2>
+        <h2>Music</h2>
         <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set.</p>
         <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set.</p>
       </div> 
 
       <div class="card">
-        <h2>Hobby</h2>
+        <h2>Game</h2>
+        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
+        <ul class="skills">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Figma</li>
+          <li>Ai</li>
+        </ul>
+        <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
+      </div> 
+
+      <div class="card">
+        <h2>Cooking</h2>
+        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
+        <ul class="skills">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Figma</li>
+          <li>Ai</li>
+        </ul>
+        <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
+      </div> 
+
+      <div class="card">
+        <h2>Exercise</h2>
         <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
         <ul class="skills">
           <li>HTML</li>
