--- a/hobby.html
+++ b/hobby.html
@@ -19,7 +19,8 @@
     <header>
       <div class="profile-image-hobby"></div>
       <h1 class="tag name">Hello, I’m Ravel.</h1>
-      <p class="tag location-hobby">...and here are some new things about me.</p>
+      <p class="tag location-hobby">My home is Goiânia, Brazil.</p>
+      <p class="tag location-hobby-hidden">...and here are some new things about me.</p>
     </header>
 
     <main class="flex">
@@ -45,13 +46,16 @@
       <div class="card">
         <h2>Cooking</h2>
         <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Figma</li>
-          <li>Ai</li>
-        </ul>
+        <details>
+          <summary>Test</summary>
+          <ul class="skills">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Figma</li>
+            <li>Ai</li>
+          </ul>
+        </details>
         <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
       </div> 
 
