--- a/hobby.html
+++ b/hobby.html
@@ -26,8 +26,21 @@
     <main class="flex">
       <div class="card">
         <h2>Music</h2>
-        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set.</p>
-        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set.</p>
+        <p>One of the things that i love to do is listening to music. Music is always present in my life, from work to leisure. I probabily have a playlist for everything, work, gym,
+          game, reading, runing, driving, etc, you name it. I have a lot fond memory related to music that always make me fell nostalgic, that make me happy, some sad or energized.
+          If you want to know more about me you can click right below and see some of the playlists that i enjoy to listen.
+        </p>
+        <details>
+          <summary>Some of my playlists</summary>
+          <ul class="skills">
+            <li><a href="https://open.spotify.com/playlist/3cSvX78TavqDjomZfjx3IB?si=6a1148813a7f4aad" target="_blank" class="spotify">In the fellings</a></li>
+            <li><a href="https://open.spotify.com/playlist/1ZFjO83PBUACmbsMoOgrjr?si=19f9db9ed9624ee6" target="_blank" class="spotify">Gym</a></li>
+            <li><a href="https://open.spotify.com/playlist/2MxAi2cMSXp1fMpvlIYvco?si=8a5445d465694296" target="_blank" class="spotify">To run</a></li>
+            <li><a href="https://open.spotify.com/playlist/4cgj9PaBcvdQdEXjuKL148?si=870a77639664464b" target="_blank" class="spotify">Good old times</a></li>
+            <li><a href="https://open.spotify.com/album/4NNdLCqeVIW05mdQiG2zua?si=wumKNR65RPKrNYhNAQKiAw" target="_blank" class="spotify">Some Prydz</a></li>
+            <li><a href="https://open.spotify.com/playlist/6MpmPVSSijIvSQVZZ5KXPE?si=639ab8f4094c491c" target="_blank" class="spotify">EDM</a></li>
+          </ul>
+        </details>
       </div> 
 
       <div class="card">
@@ -46,16 +59,6 @@
       <div class="card">
         <h2>Cooking</h2>
         <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
-        <details>
-          <summary>Test</summary>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Figma</li>
-            <li>Ai</li>
-          </ul>
-        </details>
         <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
       </div> 
 
