--- a/hobby.html
+++ b/hobby.html
@@ -27,8 +27,9 @@
       <div class="card">
         <h2>Music</h2>
         <p>One of the things that i love to do is listening to music. Music is always present in my life, from work to leisure. I probabily have a playlist for everything, work, gym,
-          game, reading, runing, driving, etc, you name it. I have a lot fond memory related to music that always make me fell nostalgic, that make me happy, some sad or energized.
-          If you want to know more about me you can click right below and see some of the playlists that i enjoy to listen.
+          game, reading, runing, driving, etc, you name it. 
+        <p>I have a lot fond memory related to music that always make me fell nostalgic, that make me happy, some sad or energized.
+          If you want to know more about me you can click right below and see some of the playlists that i enjoy to listen.</p>
         </p>
         <details>
           <summary>Some of my playlists</summary>
@@ -44,26 +45,22 @@
       </div> 
 
       <div class="card">
+        <h2>Exercise</h2>
+        <p>What can i say? I just realy like the feeling of fulfillment that you get after a session of calisthenics. I have been going to the gym since my teens 
+          and got bored of gym exercises, until i got to know calisthenics, since then i couldn't stop.</p>
+        <div class="container-img">
+          <img src="images/Pull_up.gif" alt="funny animation of a man doing pull up exercise" class="pull-up-image">
+        </div>
+      </div> 
+
+      <div class="card">
         <h2>Game</h2>
         <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Figma</li>
-          <li>Ai</li>
-        </ul>
         <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
       </div> 
 
       <div class="card">
         <h2>Cooking</h2>
-        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
-        <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
-      </div> 
-
-      <div class="card">
-        <h2>Exercise</h2>
         <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
         <ul class="skills">
           <li>HTML</li>
