--- a/hobby.html
+++ b/hobby.html
@@ -55,13 +55,31 @@
 
       <div class="card">
         <h2>Game</h2>
-        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
-        <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
+        <p>My love for games started very early with my first console "NES" at 6 years and still going strong 29 years later. After a played WoW (World of Warcraft) for the first 
+          time my focus for games completely shifted for the PC, making my acc on steam, and like most steam users, making a collection of games that you have and wish to have 
+          time to play at some point.</p>
+        <p>Because of my design profession and personal taste i have a soft spot for games that use pixel art. I also love sim farm games and survival games that i can play with friends.
+          I am always open to friendly invites to play in case or tastes match, you can see some of the exemples of games that i love right below:
+        </p>
+        <details>
+          <summary>Games that i love</summary>
+          <div class="container-icons">
+            <a href="https://www.youtube.com/watch?v=liQLtCLq3tc" target="_blank"><img src="images/game/valheim.png" title="Valheim" alt="valheim game icon" class="game-icons"></a>
+            <a href="https://www.youtube.com/watch?v=TptJHeWngJs" target="_blank"><img src="images/game/bastion.png" title="Bastion" alt="bastion game icon" class="game-icons"></a>
+            <a href="https://www.youtube.com/watch?v=Bz8l935Bv0Y" target="_blank"><img src="images/game/hades.png" title="Hades" alt="hades game icon" class="game-icons"></a>
+            <a href="https://www.youtube.com/watch?v=Qwgq_9EOCTg" target="_blank"><img src="images/game/risk.png" title="Risk of Rain 2" alt="risk of rain 2 game icon" class="game-icons"></a>
+            <a href="https://www.youtube.com/watch?v=FTZ5csdOdac" target="_blank"><img src="images/game/sandrock.png" title="My time at Sandrock" alt="my time at sandrock game icon" class="game-icons"></a>
+            <a href="https://www.youtube.com/watch?v=ot7uXNQskhs" target="_blank"><img src="images/game/stardew.png" title="Stardew Valley" alt="stardew valley game icon" class="game-icons"></a>
+            <a href="https://www.youtube.com/watch?v=w7uOhFTrrq0" target="_blank"><img src="images/game/terraria.png" title="Terraria" alt="terraria game icon" class="game-icons"></a>
+            <a href="https://www.youtube.com/watch?v=aB_2ZRn9F_k" target="_blank"><img src="images/game/vrising.png" title="V Rising" alt="v rising game icon" class="game-icons"></a>
+            <a href="https://www.youtube.com/watch?v=Wq4Y7ztznKc" target="_blank"><img src="images/game/wow.png" title="World of Warcraft" alt="wow game icon" class="game-icons"></a>
+          </div>
+        </details>
       </div> 
 
       <div class="card">
         <h2>Cooking</h2>
-        <p>I’m a brazilian guy that loves to cook, exercise, play games from tabletop to PC and is always seeking new things to add to my skill set:</p>
+        <p>I’m certainly no masterchef, i am more of a guy that like to do it himself.</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
