--- a/hobby.html
+++ b/hobby.html
@@ -79,15 +79,12 @@
 
       <div class="card">
         <h2>Cooking</h2>
-        <p>I’m certainly no masterchef, i am more of a guy that like to do it himself.</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Figma</li>
-          <li>Ai</li>
-        </ul>
-        <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
+        <p>I’m certainly no masterchef, i am more of a guy that like to do it himself. It probabily started with videos on how to make food to better balance my diet and exercise, from
+          there i got to like cooking and started experimenting with lunch, prep meal for the week, etc.
+        </p>
+        <p>I enjoy looking up for cooking utensils, how am i going to use it, where am i going to use it, how to balance and use different kinds of spices, what do they do and soo on.
+          Nowadays am in a dessert cooking phase, at one point i had just bought some expensive brownie, tasted it and thougth to myself: "I can probabily do one better and cheaper at home", 
+          from then on the rest is history.</p>
       </div> 
 
     </main>
