--- a/hobby.html
+++ b/hobby.html
@@ -27,10 +27,9 @@
       <div class="card">
         <h2>Music</h2>
         <p>One of the things that i love to do is listening to music. Music is always present in my life, from work to leisure. I probabily have a playlist for everything, work, gym,
-          game, reading, runing, driving, etc, you name it. 
+          game, reading, runing, driving, etc, you name it.</p>
         <p>I have a lot fond memory related to music that always make me fell nostalgic, that make me happy, some sad or energized.
           If you want to know more about me you can click right below and see some of the playlists that i enjoy to listen.</p>
-        </p>
         <details>
           <summary>Some of my playlists</summary>
           <ul class="skills">
