--- a/hobby.html
+++ b/hobby.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
 
-    <header>
+    <header class="header-hobby">
       <div class="profile-image-hobby"></div>
       <h1 class="tag name">Hello, I’m Ravel.</h1>
       <p class="tag location-hobby">My home is Goiânia, Brazil.</p>
