--- a/contacts.html
+++ b/contacts.html
@@ -24,24 +24,11 @@
     </header>
 
     <main class="flex">
-      <div class="card">
-        <h2>Background</h2>
+      <div class="card-contact">
+        <h2>Contacts</h2>
         <p>I’m an experienced professional in Graphic Design and Web Design, with solid academic training in Art Direction, Computer Network Technology and Graphic Design. 
           Fluent in English, responsible for creating and producing graphic material for renowned clients such as Butantan, Jagermeister and Prince.</p>
         <p>I’m a currently a graphic designer looking to improve and learn more about Front End Web Development.</p>
-      </div> 
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>Without losing my current design mindset, i want to master and further improve my skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Figma</li>
-          <li>Ai</li>
-        </ul>
-        <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
       </div> 
 
     </main>
