--- a/hobby.html
+++ b/hobby.html
@@ -13,6 +13,7 @@
           <li class="name">Ravel Oliveira</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="hobby.html">Hobby</a></li>
+          <li><a href="contacts.html">Contacts</a></li>
         </ul>
     </div>
 
