--- a/contacts.html
+++ b/contacts.html
@@ -26,9 +26,26 @@
     <main class="flex">
       <div class="card-contact">
         <h2>Contacts</h2>
-        <p>I’m an experienced professional in Graphic Design and Web Design, with solid academic training in Art Direction, Computer Network Technology and Graphic Design. 
-          Fluent in English, responsible for creating and producing graphic material for renowned clients such as Butantan, Jagermeister and Prince.</p>
-        <p>I’m a currently a graphic designer looking to improve and learn more about Front End Web Development.</p>
+        <p>Hi, you can contact me by email, portfolio or call me maybe!</p>
+        <div class="container-icons">
+            <img src="images/contacts/contact-01.png" alt="image of a email contact">
+            <img src="images/contacts/contact-02.png" alt="image of a email contact">
+            <img src="images/contacts/contact-03.png" alt="image of a email contact">
+        </div>
+        <div class="container-icons-vik">
+            <img src="images/contacts/start-01.png" alt="image of a start icon" class="start-icon">
+            <img src="images/contacts/vik-01.png" alt="image of a viking cartoon moving" class="vik-icon">
+            <img src="images/contacts/vik-02.png" alt="image of a viking cartoon moving" class="vik-icon">
+            <img src="images/contacts/vik-03.png" alt="image of a viking cartoon moving" class="vik-icon">
+            <img src="images/contacts/vik-04.png" alt="image of a viking cartoon moving" class="vik-icon">
+            <img src="images/contacts/vik-05.png" alt="image of a viking cartoon moving" class="vik-icon">
+            <img src="images/contacts/vik-06.png" alt="image of a viking cartoon moving" class="vik-icon">
+            <img src="images/contacts/vik-07.png" alt="image of a viking cartoon moving" class="vik-icon">
+            <img src="images/contacts/vik-08.png" alt="image of a viking cartoon moving" class="vik-icon" id="vik-last">
+            <a href="https://steamcommunity.com/profiles/76561198033320644/nKc" target="_blank" class="steam-contact">
+                <img src="images/contacts/steam-04.png" alt="stylized text for steam contact">
+            </a>
+        </div>
       </div> 
 
     </main>
