--- a/hobby.html
+++ b/hobby.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Ravel Oliveira</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="hobby.html">Hobby</a></li>
           <li><a href="contacts.html">Contacts</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header class="header-hobby">
       <div class="profile-image-hobby"></div>
@@ -25,7 +25,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <article class="card">
         <h2>Music</h2>
         <p>One of the things that i love to do is listening to music. Music is always present in my life, from work to leisure. I probabily have a playlist for everything, work, gym,
           game, reading, runing, driving, etc, you name it.</p>
@@ -42,18 +42,18 @@
             <li><a href="https://open.spotify.com/playlist/6MpmPVSSijIvSQVZZ5KXPE?si=639ab8f4094c491c" target="_blank" class="spotify">EDM</a></li>
           </ul>
         </details>
-      </div> 
+      </article> 
 
-      <div class="card">
+      <article class="card">
         <h2>Exercise</h2>
         <p>What can i say? I just realy like the feeling of fulfillment that you get after a session of calisthenics. I have been going to the gym since my teens 
           and got bored of gym exercises, until i got to know calisthenics, since then i couldn't stop.</p>
         <div class="container-img">
           <img src="images/Pull_up.gif" alt="funny animation of a man doing pull up exercise" class="pull-up-image">
         </div>
-      </div> 
+      </article> 
 
-      <div class="card">
+      <article class="card">
         <h2>Game</h2>
         <p>My love for games started very early with my first console "NES" at 6 years and still going strong 29 years later. After a played WoW (World of Warcraft) for the first 
           time my focus for games completely shifted for the PC, making my acc on steam, and like most steam users, making a collection of games that you have and wish to have 
@@ -75,9 +75,9 @@
             <a href="https://www.youtube.com/watch?v=Wq4Y7ztznKc" target="_blank"><img src="images/game/wow.png" title="World of Warcraft" alt="wow game icon" class="game-icons"></a>
           </div>
         </details>
-      </div> 
+      </article> 
 
-      <div class="card">
+      <article class="card">
         <h2>Cooking</h2>
         <p>I’m certainly no masterchef, i am more of a guy that like to do it himself. It probabily started with videos on how to make food to better balance my diet and exercise, from
           there i got to like cooking and started experimenting with lunch, prep meal for the week, etc.
@@ -85,7 +85,7 @@
         <p>I enjoy looking up for cooking utensils, how am i going to use it, where am i going to use it, how to balance and use different kinds of spices, what do they do and soo on.
           Nowadays am in a dessert cooking phase, at one point i had just bought some expensive brownie, tasted it and thougth to myself: "I can probabily do one better and cheaper at home", 
           from then on the rest is history.</p>
-      </div> 
+      </article> 
 
     </main>
     <footer>
