--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Ravel Oliveira</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="hobby.html">Hobby</a></li>
           <li><a href="contacts.html">Contacts</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/me.jpg" alt="A profile image of Ravel Oliveira" class="profile-image">
@@ -24,14 +24,14 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <article class="card">
         <h2>Background</h2>
         <p>I’m an experienced professional in Graphic Design and Web Design, with solid academic training in Art Direction, Computer Network Technology and Graphic Design. 
           Fluent in English, responsible for creating and producing graphic material for renowned clients such as Butantan, Jagermeister and Prince.</p>
         <p>I’m a currently a graphic designer looking to improve and learn more about Front End Web Development.</p>
-      </div> 
+      </article> 
 
-      <div class="card">
+      <article class="card">
         <h2>Goals</h2>
         <p>Without losing my current design mindset, i want to master and further improve my skills and abilities in:</p>
         <ul class="skills">
@@ -42,7 +42,7 @@
           <li>Ai</li>
         </ul>
         <p>I’d like to work for a web design firm helping them and the clients to create some amazing online pieces, be it a simple website to big market campaigns.</p>
-      </div> 
+      </article> 
 
     </main>
     <footer>
