--- a/contacts.html
+++ b/contacts.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Ravel Oliveira</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="hobby.html">Hobby</a></li>
           <li><a href="contacts.html">Contacts</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/me.jpg" alt="A profile image of Ravel Oliveira" class="profile-image">
@@ -24,7 +24,7 @@
     </header>
 
     <main class="flex">
-      <div class="card-contact">
+      <article class="card-contact">
         <h2>Contacts</h2>
         <p>Hi, you can contact me by email, portfolio or call me maybe!</p>
         <div class="container-icons">
@@ -46,7 +46,7 @@
                 <img src="images/contacts/steam-04.png" alt="stylized text for steam contact">
             </a>
         </div>
-      </div> 
+      </article> 
 
     </main>
     <footer>
