--- a/contacts.html
+++ b/contacts.html
@@ -29,8 +29,8 @@
         <p>Hi, you can contact me by email, portfolio or call me maybe!</p>
         <div class="container-icons">
             <img src="images/contacts/contact-01.png" alt="image of a email contact">
-            <img src="images/contacts/contact-02.png" alt="image of a email contact">
-            <img src="images/contacts/contact-03.png" alt="image of a email contact">
+            <img src="images/contacts/contact-02.png" alt="image of a phone number contact">
+            <img src="images/contacts/contact-03.png" alt="image of a website contact">
         </div>
         <div class="container-icons-vik">
             <img src="images/contacts/start-01.png" alt="image of a start icon" class="start-icon">
